clusters/cluster0/kubernetes/apps/matrix/sable/app/sable-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sable
  namespace: matrix
spec:
  hostnames:
    - sable.gregbob.net
  parentRefs:
    - name: wildcard-gregbob-net
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sable-service
          port: 8080
